# TPs-Calcul-Parallele

./: CMakeLists.txt  README.md  main.cc
geometries/: CMakeLists.txt  grid.cc  partitioning.cc
include/: assembling.h  conjugate_gradient.h  constants.h  grid.h  linear_system.h  output.h  output_vtk.h  parallel.h  partitioning.h
output/: CMakeLists.txt  output.cc  output_vtk.cc
solver/: CMakeLists.txt  assembling.cc  conjugate_gradient.cc  linear_system.cc
